# micros_cv_detection

./: CMakeLists.txt  README.md  license  package.xml
include/: cv_detection.h
launch/: cv_detection.launch
src/: cv_detection.cpp  main.cpp
